WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72647
Chromium crashing on http/tests/misc/xslt-bad-import.html after
r100311
https://bugs.webkit.org/show_bug.cgi?id=72647
Summary
Chromium crashing on http/tests/misc/xslt-bad-import.html after r100311
Nate Chapin
Reported
2011-11-17 13:28:03 PST
I appear to have dropped a needed protecting RefPtr<Document> in obscure cases in
http://trac.webkit.org/changeset/100311
. If SubresourceLoader::releaseResources() gets re-entered, a CachedResourceLoader can die while still in loadDone(). The variant of http/tests/misc/xslt-bad-import.html that runs in a full chromium build crashes pretty consistently as a result. Patch imminent.
Attachments
patch
(1.24 KB, patch)
2011-11-17 13:37 PST
,
Nate Chapin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nate Chapin
Comment 1
2011-11-17 13:37:02 PST
Created
attachment 115668
[details]
patch
WebKit Review Bot
Comment 2
2011-11-17 15:35:38 PST
Comment on
attachment 115668
[details]
patch Clearing flags on attachment: 115668 Committed
r100692
: <
http://trac.webkit.org/changeset/100692
>
WebKit Review Bot
Comment 3
2011-11-17 15:35:42 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug