r100311 dropped a RefPtr that is very helpful. Add it back. https://bugs.webkit.org/show_bug.cgi?id=72647

Reviewed by Adam Barth.

http/tests/misc/xslt-bad-import.html should
stop crashing in full chromium builds.

* loader/cache/CachedResourceLoader.cpp:
(WebCore::CachedResourceLoader::loadDone):


Canonical link: https://commits.webkit.org/89193@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100692 268f45cc-cd09-0410-ab3c-d52691b4dbfc